manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: get-tasks
  template:
    metadata:
      labels:
        app: get-tasks
    spec:
      containers:
      - name: get-tasks
        image: devopsinsiders/#__#IMAGE_NAME#__#:#__#IMAGE_TAG#__#
        ports:
        - containerPort: 8000
