manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-tasks
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: get-tasks
  ports:
    - port: 80
      targetPort: 8000
